k8s/networkpolicies/02-allow-app-to-databases.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-databases
  namespace: inventario-egi
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values: [mysql, mongo, ldap]
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: inventario-app
      ports:
        - protocol: TCP
          port: 3306
        - protocol: TCP
          port: 27017
        - protocol: TCP
          port: 389
        - protocol: TCP
          port: 636
