k8s/networkpolicies/03-allow-app-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-egress
  namespace: inventario-egi
spec:
  podSelector:
    matchLabels:
      app: inventario-app
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: mysql
      ports:
        - protocol: TCP
          port: 3306
    - to:
        - podSelector:
            matchLabels:
              app: mongo
      ports:
        - protocol: TCP
          port: 27017
    - to:
        - podSelector:
            matchLabels:
              app: ldap
      ports:
        - protocol: TCP
          port: 389
        - protocol: TCP
          port: 636
    - to: []
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
